--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,4 +1,8 @@
 site_name: MicroData
+
+repo_name: "2024.2-T03-MicroData"
+repo_url: "https://github.com/mdsreq-fga-unb/2024.2-T03-MicroData"
+
 theme:
   name: material
 
