--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -7,7 +7,7 @@ theme:
   name: material
 
 nav: 
-  - Intrudução: introducao.md
+  - Intrudução: index.md
   - Visão do Produto e Projeto:
     - Visão do Produto: visao_produto_projeto/visao_do_produto.md
 
