--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -5,10 +5,14 @@ repo_url: "https://github.com/mdsreq-fga-unb/2024.2-T03-MicroData"
 
 theme:
   name: material
+  palette:
+    primary: red
 
 nav: 
   - Intrudução: index.md
   - Visão do Produto e Projeto:
     - Visão do Produto: visao_produto_projeto/visao_do_produto.md
-  
+  - Sprints:
+    - Sprint 0: sprints/sprint0/reuniao.md
+
 
