Adicionando pequenas correções no historico de versão

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -9,13 +9,14 @@ theme:
     primary: red
 
 nav:
-  - Introdução: index.md
+  - Pagina Inicial: index.md
   - Cenário atual do cliente e do Negócio: cenario_cliente/cenario.md
-  - Solução Proposta: visao_produto_projeto/visao_do_produto.md
-  - Estratégias de Engenharia: estrategias_de_engenharia/estrategias.md
-  - Cronograma e Entregas: cronograma_entregas/cronograma.md
-  - Interação entre equipe e Cliente: interacao_equipe_cliente/interacao.md
-  - Lições Aprendidas: licoes_aprendidas/licoes.md
-  - Entregas: entregas/entregas.md
+  - Visão do Produto e Projeto:
+    - Solução Proposta: visao_produto_projeto/visao_do_produto.md
+    - Estratégias de Engenharia: estrategias_de_engenharia/estrategias.md
+    - Cronograma e Entregas: cronograma_entregas/cronograma.md
+    - Interação entre equipe e Cliente: interacao_equipe_cliente/interacao.md
+    - Lições Aprendidas: licoes_aprendidas/licoes.md
+    - Entrega: entregas/entregas.md
 
 
