Página para inserir o quadro comparativo de técnicas de engenharia de requisitos por fase do RAD

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -14,6 +14,7 @@ nav:
   - Visão do Produto e Projeto:
     - Solução Proposta: visao_produto_projeto/visao_do_produto.md
     - Estratégias de Engenharia: estrategias_de_engenharia/estrategias.md
+    - Engenharia de Requisitos: engenharia_requisitos/requisitos.md
     - Cronograma e Entregas: cronograma_entregas/cronograma.md
     - Interação entre Equipe e Cliente: interacao_equipe_cliente/interacao.md
     - Lições Aprendidas: licoes_aprendidas/licoes.md
