--- a/.env.template
+++ b/.env.template
@@ -3,3 +3,5 @@ POSTGRES_PASSWORD=123456
 POSTGRES_DB=postgres
 PGADMIN_DEFAULT_EMAIL=admin@example.com
 PGADMIN_DEFAULT_PASSWORD=admin
+
+DATABASE_URL=postgresql://postgres:123456@localhost:5432/postgres?schema=public
