--- a/.env.template
+++ b/.env.template
@@ -4,4 +4,4 @@ POSTGRES_DB=postgres
 PGADMIN_DEFAULT_EMAIL=admin@example.com
 PGADMIN_DEFAULT_PASSWORD=admin
 
-DATABASE_URL=postgresql://postgres:123456@localhost:5432/postgres?schema=public
+DATABASE_URL=postgresql://postgres:123456@postgres:5432/postgres?schema=public
