--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -22,6 +22,8 @@ nav:
     - Backlog do Produto: visao_produto_projeto/backlog_produto.md
     - Lições Aprendidas: visao_produto_projeto/licoes.md
     - Especificação dos Requisitos: visao_produto_projeto/especificacao_requisitos.md
+  - PBB: pbb/pbb.md
+  - USM: usm/userStoryMap.md
   - Entregas: entregas/entregas.md
 
 
