--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -23,7 +23,7 @@ nav:
     - Lições Aprendidas: visao_produto_projeto/licoes.md
     - Especificação dos Requisitos: visao_produto_projeto/especificacao_requisitos.md
   - Iterações: 
-    - Iteração 5: visao_produto_projeto/iteracoes/iteracao5.md
+    - Iteração 5: iteracoes/iteracao5.md
   - PBB: pbb/pbb.md
   - USM: usm/userStoryMap.md
   - Entregas: entregas/entregas.md
