COrreção de rota mkdocs

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -20,7 +20,7 @@ nav:
     - Requisitos de Software: visao_produto_projeto/requisitos_software.md
     - DoR e DoD: visao_produto_projeto/dor_dod.md
     - Backlog do Produto: visao_produto_projeto/backlog_produto.md
-    - Protótipo: visao_produto_projeto/ prototipo.md
+    - Protótipo: visao_produto_projeto/prototipo.md
     - Especificação dos Requisitos: visao_produto_projeto/especificacao_requisitos.md
     - Lições Aprendidas: visao_produto_projeto/licoes.md
   - Iterações: 
