COrreção do PBB

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -24,7 +24,7 @@ nav:
     - Especificação dos Requisitos: visao_produto_projeto/especificacao_requisitos.md
     - Lições Aprendidas: visao_produto_projeto/licoes.md
   - Iterações: 
-    - Iteração 5: iteracoes/iteracao5.md
+    - Iteração 2, 3 e 4: iteracoes/iteracao5.md
   - PBB: pbb/pbb.md
   - USM: usm/userStoryMap.md
   - Entregas: entregas/entregas.md
