--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -55,6 +55,8 @@ services:
       context: ./frontend
       dockerfile: Dockerfile
     container_name: microdata_frontend
+    environment:
+      REACT_APP_API_URL: ${REACT_APP_API_URL}
     ports:
       - "3000:3000"
     volumes:
