fix: CORS Error

--- a/.env.template
+++ b/.env.template
@@ -8,3 +8,4 @@ PGADMIN_DEFAULT_PASSWORD=admin
 DATABASE_URL=postgresql://postgres:123456@postgres:5432/postgres?schema=public
 
 REACT_APP_API_URL=http://localhost:5000/api/
+CORS_ORIGIN=http://localhost:3000
