--- a/frontend/package.json
+++ b/frontend/package.json
@@ -6,11 +6,16 @@
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
     "@mui/icons-material": "^6.4.0",
+    "@mui/lab": "^6.0.0-beta.26",
     "@mui/material": "^6.4.0",
     "@mui/styles": "^6.4.0",
+    "@mui/x-date-pickers": "^7.26.0",
     "axios": "^1.7.9",
+    "chart.js": "^4.4.7",
     "cra-template": "1.2.0",
+    "dayjs": "^1.11.13",
     "react": "^19.0.0",
+    "react-chartjs-2": "^5.3.0",
     "react-dom": "^19.0.0",
     "react-router-dom": "^7.1.5",
     "react-scripts": "5.0.1"
