--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -34,6 +34,7 @@ nav:
     - Especificação 3: uc/especificacoes/03.md
     - Especificação 4: uc/especificacoes/04.md
     - Especificação 5: uc/especificacoes/05.md
+    - Especificação 6: uc/especificacoes/06.md
   - Entregas: entregas/entregas.md
 
 
